Boolean modifier inverts Difference and Union (sometimes + strange behavior) #51074

Closed
opened 2017-03-29 00:11:06 +02:00 by Maverick Chardet · 10 comments

System Information
Windows 10 64 bits
The issue is not with the rendering but just in case: Iris Pro graphics with Nvidia 960M

Blender Version
Broken: 2.78c e92f235283

Short description of error
Sometimes when applying the boolean modifier, selecting Difference does a Union and conversly.

Exact steps for others to reproduce the error

  • Open attached Blender file
    Bishop low bad.blend
  • Select Primary white bishop
  • Add Boolean Modifier (Difference, BMesh, Object: Cube)
  • Apply
    At this point a Union was made instead of a Difference. If selecting Union it makes a Difference instead.

EDIT: when doing a Difference by selecting Union, faces to "cover the holes" are not created like they're supposed to be

It seems like deleting the cube and trying with a fresh one corrects the error.

**System Information** Windows 10 64 bits The issue is not with the rendering but just in case: Iris Pro graphics with Nvidia 960M **Blender Version** Broken: 2.78c e92f235283 **Short description of error** Sometimes when applying the boolean modifier, selecting Difference does a Union and conversly. **Exact steps for others to reproduce the error** - Open attached Blender file [Bishop low bad.blend](https://archive.blender.org/developer/F546931/Bishop_low_bad.blend) - Select Primary white bishop - Add Boolean Modifier (Difference, BMesh, Object: Cube) - Apply At this point a Union was made instead of a Difference. If selecting Union it makes a Difference instead. EDIT: when doing a Difference by selecting Union, faces to "cover the holes" are not created like they're supposed to be It seems like deleting the cube and trying with a fresh one corrects the error.

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @Maverick

Added subscriber: @Maverick

#51234 was marked as duplicate of this issue

#51234 was marked as duplicate of this issue
Maverick Chardet changed title from Boolean modifier inverts Difference and Union to Boolean modifier inverts Difference and Union (sometimes + strange behavior) 2017-03-29 00:23:46 +02:00
Member

Added subscriber: @Blendify

Added subscriber: @Blendify
Member

I think you uploaded the wrong blend-file.

I think you uploaded the wrong blend-file.

In #51074#428388, @Blendify wrote:
I think you uploaded the wrong blend-file.

Yes you're right sorry, I just changed the file, this one is the correct one.

> In #51074#428388, @Blendify wrote: > I think you uploaded the wrong blend-file. Yes you're right sorry, I just changed the file, this one is the correct one.
Campbell Barton was assigned by Aaron Carlisle 2017-04-16 22:21:54 +02:00
Member

Added subscriber: @ian_bruce

Added subscriber: @ian_bruce

I confirm all of this, even the "holes not covered" part, using the supplied test case.

also with this test case, the "Carve" solver is confused:

intersect --> difference
difference --> intersect
union --> cube - bishop

I recommend turning off viewport visibility for "Cube", so you can see what's going on.

I confirm all of this, even the "holes not covered" part, using the supplied test case. also with this test case, the "Carve" solver is confused: intersect --> difference difference --> intersect union --> cube - bishop I recommend turning off viewport visibility for "Cube", so you can see what's going on.

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

This issue was referenced by a850d74312

This issue was referenced by a850d7431218d2c169f217e81a2cedc422319c30
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#51074
No description provided.