Fix T51074: Boolean modifier inverts operation

Support for negative scaled objects.